// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with current user renders correctly 1`] = `
<header
  className="MuiPaper-root-9 MuiPaper-elevation4-15 MuiAppBar-root-1 MuiAppBar-positionStatic-5"
>
  <div
    className="MuiToolbar-root-36 MuiToolbar-gutters-37"
  >
    <div
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <div
        style={
          Object {
            "color": "black",
            "textDecoration": "none",
          }
        }
        to="/"
      >
        <img
          alt="logo"
          src="/images/logo-small.jpg"
          style={
            Object {
              "display": "inline-block",
              "marginRight": 10,
              "verticalAlign": "middle",
            }
          }
        />
        <h1
          className="MuiTypography-root-38 MuiTypography-headline-43 MuiTypography-colorInherit-57"
          style={
            Object {
              "display": "inline-block",
              "verticalAlign": "middle",
            }
          }
        >
          MateriaBrasil
        </h1>
      </div>
    </div>
    <h3
      className="MuiTypography-root-38 MuiTypography-subheading-45 MuiTypography-colorInherit-57"
    >
      Foo Bar
    </h3>
  </div>
</header>
`;

exports[`without current user renders correctly 1`] = `
<header
  className="MuiPaper-root-9 MuiPaper-elevation4-15 MuiAppBar-root-1 MuiAppBar-positionStatic-5"
>
  <div
    className="MuiToolbar-root-36 MuiToolbar-gutters-37"
  >
    <div
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <div
        style={
          Object {
            "color": "black",
            "textDecoration": "none",
          }
        }
        to="/"
      >
        <img
          alt="logo"
          src="/images/logo-small.jpg"
          style={
            Object {
              "display": "inline-block",
              "marginRight": 10,
              "verticalAlign": "middle",
            }
          }
        />
        <h1
          className="MuiTypography-root-38 MuiTypography-headline-43 MuiTypography-colorInherit-57"
          style={
            Object {
              "display": "inline-block",
              "verticalAlign": "middle",
            }
          }
        >
          MateriaBrasil
        </h1>
      </div>
    </div>
    <h3
      className="MuiTypography-root-38 MuiTypography-subheading-45 MuiTypography-colorInherit-57"
    />
  </div>
</header>
`;
